--- a/modules/common-styling/public/assets/style/pos-page.css
+++ b/modules/common-styling/public/assets/style/pos-page.css
@@ -2,6 +2,7 @@
   defines global page structure and looks
 
   page background and font
+  utility classes
 */
 
 
@@ -18,7 +19,7 @@
     display: flex;
     flex-direction: column;
 
-    background-color: var(--pos-color-content-background);
+    background-color: var(--pos-color-page-background);
 
     text-rendering: optimizeLegibility;
     font-family: var(--pos-font-default);
@@ -29,6 +30,21 @@
     background-color: var(--pos-color-selection-background);
 
     color: var(--pos-color-selection-text);
+  }
+
+
+  /* utility classes
+  ============================================================================ */
+  .pos-text-end {
+    text-align: end;
+  }
+
+  .pos-text-start {
+    text-align: start;
+  }
+
+  .pos-text-center {
+    text-align: center;
   }
 
 }
