--- a/modules/common-styling/public/assets/style/pos-typography.css
+++ b/modules/common-styling/public/assets/style/pos-typography.css
@@ -1,6 +1,7 @@
 /*
   defines fonts, paragraphs and headings
 
+  icons
   links
   headings
   sidenotes
@@ -10,35 +11,66 @@
 
 @layer common-styling {
 
+  /* icons
+  ============================================================================ */
+  .pos-icon {
+    fill: currentColor;
+  }
+
+
   /* links
   ============================================================================ */
-  a {
+  :where(.pos-app) a {
     color: var(--pos-color-interactive);
 
     transition: color .1s linear;
   }
 
-  a:hover {
+  :where(.pos-app) a:hover,
+  .pos-debug-link-hover {
     color: var(--pos-color-interactive-hover);
   }
 
-  a:active {
+  :where(.pos-app) a:active,
+  .pos-debug-link-active {
     color: var(--pos-color-interactive-active)
   }
 
-  a:focus-visible {
+  :where(.pos-app) a:not(.pos-button):focus-visible,
+  .pos-debug-link-focus {
     border-radius: var(--pos-radius-button);
-    background-color: color-mix(in srgb, var(--pos-color-focused) 10%, transparent 90%);
-    box-shadow: 0 0 6px 1px var(--pos-color-focused);
+    outline: 2px solid var(--pos-color-focused);
+    outline-offset: 2px;
 
     color: var(--pos-color-interactive-hover);
+  }
+
+  :where(.pos-app) a svg {
+    width: 1em;
+    height: 1em;
+    display: inline-block;
+    position: relative;
+    top: 2px;
+
+    fill: currentColor;
+  }
+
+  /* hidden text label */
+  :where(.pos-app) a .pos-label {
+    position: absolute;
+    inset-inline-start: -100vw;
   }
 
 
   /* headings
   ============================================================================ */
   .pos-heading-1 {
+    margin-inline-start: -.2ex;
+    display: block;
 
+    font-family: var(--pos-font-heading);
+    font-size: 3rem;
+    font-weight: 500;
   }
 
   .pos-heading-2 {
@@ -59,11 +91,39 @@
     font-weight: 400;
   }
 
+  .pos-heading-4 {
+    display: block;
+
+    font-family: var(--pos-font-heading);
+    font-size: 1.25rem;
+    font-weight: 400;
+  }
+
 
   /* sidenotes
   ============================================================================ */
   .pos-supplementary {
-    color: var(--pos-color-light-content-text-supplementary);
+    color: var(--pos-color-content-text-supplementary);
   }
+
+
+  /* tips
+  ============================================================================ */
+  .pos-tip {
+    margin-block-start: .5rem;
+    position: relative;
+    display: flex;
+    gap: .5em;
+
+    color: var(--pos-color-content-text-supplementary);
+  }
+
+    .pos-tip svg {
+      width: 1.2rem;
+      height: 1.2rem;
+      position: relative;
+      top: 3px;
+      flex-shrink: 0;
+    }
 
 }
