--- a/modules/user/public/views/partials/passwords/reset.liquid
+++ b/modules/user/public/views/partials/passwords/reset.liquid
@@ -28,7 +28,9 @@ metadata:
 
     {% render 'modules/common-styling/forms/hcaptcha' %}
 
-    <button type="submit" class="pos-button pos-button-primary">{{ 'modules/user/passwords.reset_password' | t }}</button>
+    <fieldset>
+      <button type="submit" class="pos-button pos-button-primary">{{ 'modules/user/passwords.reset_password' | t }}</button>
+    </fieldset>
 
   </form>
 
