--- a/modules/user/public/views/partials/users/new.liquid
+++ b/modules/user/public/views/partials/users/new.liquid
@@ -60,7 +60,9 @@ metadata:
 
     {% render 'modules/common-styling/forms/hcaptcha' %}
 
-    <button type="submit" class="pos-button pos-button-primary">{{ 'modules/user/passwords.register' | t }}</button>
+    <fieldset>
+      <button type="submit" class="pos-button pos-button-primary">{{ 'modules/user/passwords.register' | t }}</button>
+    </fieldset>
 
   </form>
 
